--- a/style.css
+++ b/style.css
@@ -53,12 +53,6 @@ section {
     max-width: 100%;
     height: auto;
 }
-.profile-picture img {
-    border-radius: 5%;
-    border: 2px solid #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-
 
 /* Media Queries for responsive design */
 @media (max-width: 768px) {
@@ -74,5 +68,5 @@ section {
 }
 
 h1{
-    text-decoration:dashed;
+    text-decoration:underline solid;
 }
